--- a/_includes/hyvor-talk-comments.html
+++ b/_includes/hyvor-talk-comments.html
@@ -1,4 +1,4 @@
-<div id="hyvor-talk-view"></div>
+<!--<div id="hyvor-talk-view"></div>
 <script type="text/javascript">
     var HYVOR_TALK_WEBSITE = '{{ site.hyvor_talk_website_id }}'; // DO NOT CHANGE THIS
     var HYVOR_TALK_CONFIG = {
