Add image resource Animated GIF and Backgorund

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,9 +33,9 @@
     </nav>
   {%- endif -%}
 
-
+  <!-- Usar un GIF animado en lugar de SVG o canvas -->
   <div class="site-icon">
-    <img src="{{ site.iconURL }}" />
+    <img src="{{ site.gifURL }}" alt="Geometric Animated Pattern" />
   </div>
 
 </header>
