Better design Add a tittle and improvments designs

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,8 @@ layout: default
 
 <div class="home">
 
+  <h1 class="main-title">Portfolio</h1>
+
   {{ content }}
 
   {% assign posts = site.posts %}
