More information Build about and contact page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,7 @@ layout: default
 <div class="home">
 
   <h1 class="main-title">Portfolio</h1>
+  <h2 class="sub-title">This site is under construction...</h2>
 
   {{ content }}
 
